--- a/chat/connectdialog.ui
+++ b/chat/connectdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>ConnectDialog</class>
+ <widget class="QDialog" name="ConnectDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -29,25 +29,12 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>80</y>
-     <width>121</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Save to File</string>
-   </property>
-  </widget>
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>30</y>
-     <width>222</width>
+     <y>40</y>
+     <width>217</width>
      <height>29</height>
     </rect>
    </property>
@@ -55,7 +42,7 @@
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>Username</string>
+       <string>IP Adress</string>
       </property>
      </widget>
     </item>
@@ -68,21 +55,21 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>110</y>
-     <width>331</width>
+     <y>120</y>
+     <width>185</width>
      <height>29</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
-     <widget class="QLineEdit" name="lineEdit_2"/>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>Browse</string>
+       <string>Port</string>
       </property>
      </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="lineEdit_2"/>
     </item>
    </layout>
   </widget>
@@ -92,7 +79,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>ConnectDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -108,7 +95,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>ConnectDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
