--- a/chat/connectdialog.ui
+++ b/chat/connectdialog.ui
@@ -47,7 +47,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="ip"/>
+     <widget class="QLineEdit" name="lineEdit"/>
     </item>
    </layout>
   </widget>
@@ -69,7 +69,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="port"/>
+     <widget class="QLineEdit" name="lineEdit_2"/>
     </item>
    </layout>
   </widget>
